swagger info is up to date
