# internal/api/auth.go
@@ -13,7 +13,7 @@ import (
 // @ID create-account
 // @Accept  json
 // @Produce  json
-// @Param input body todo.User true "account info"
+// @Param input body entity.User true "account info"
 // @Success 200 {integer} integer 1
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
@@ -39,6 +39,11 @@ func (h *Handler) signUp(c *gin.Context) {
 
 }
 
+type signInInput struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
 // @Summary SignIn
 // @Tags auth
 // @Description login
@@ -51,11 +56,6 @@ func (h *Handler) signUp(c *gin.Context) {
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /auth/sign-in [post]
-type signInInput struct {
-	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required"`
-}
-
 func (h * Handler) signIn(c * gin.Context) {
 	var input signInInput
 
