# internal/api/item.go
@@ -8,6 +8,19 @@ import (
 	"github.com/rogudator/todo-app/entity"
 )
 
+// @Summary Create todo list Item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description create todo list item
+// @ID create-list-item
+// @Accept  json
+// @Produce  json
+// @Param input body entity.TodoItem true "item info"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/:id/items/ [post]
 func (h *Handler) createItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -38,6 +51,18 @@ func (h *Handler) createItem(c *gin.Context) {
 	})
 }
 
+// @Summary Get All List Items
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get all list items
+// @ID get-all-list-items
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} entity.TodoItem
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/:id/items/ [get]
 func (h *Handler) getAllItems(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -59,6 +84,18 @@ func (h *Handler) getAllItems(c *gin.Context) {
 	c.JSON(http.StatusOK, items)
 }
 
+// @Summary Get List Item By Id
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get list items by id
+// @ID get-list-item-by-id
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} entity.TodoItem
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/:id [get]
 func (h *Handler) getItemById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -80,6 +117,19 @@ func (h *Handler) getItemById(c *gin.Context) {
 	c.JSON(http.StatusOK, item)
 }
 
+// @Summary Update todo list item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description update todo list item
+// @ID update-list-item
+// @Accept  json
+// @Produce  json
+// @Param input body entity.UpdateItemInput true "item info"
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/:id [put]
 func (h *Handler) updateItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -105,6 +155,18 @@ func (h *Handler) updateItem(c *gin.Context) {
 	c.JSON(http.StatusOK, statusResponse{"ok"})
 }
 
+// @Summary Delete List Item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description delete list item
+// @ID delete-list-item
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/:id [delete]
 func (h *Handler) deleteItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
